{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 41,
  "lineage": "a5c8b3a7-7ace-3444-8b81-3e581b97d50c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bb0d41da7e6c369",
            "arn": "arn:aws:ec2:us-east-1:954976310009:elastic-ip/eipalloc-01bb0d41da7e6c369",
            "association_id": "eipassoc-0c3b3ee8042e5202e",
            "domain": "vpc",
            "id": "eipalloc-01bb0d41da7e6c369",
            "network_border_group": "us-east-1",
            "network_interface": "eni-023400ffdf8a4525c",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-52-202-172-158.compute-1.amazonaws.com",
            "public_ip": "52.202.172.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "teletrack360-nat-eip"
            },
            "tags_all": {
              "Name": "teletrack360-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:internet-gateway/igw-0ab8321c8fe13eb17",
            "id": "igw-0ab8321c8fe13eb17",
            "owner_id": "954976310009",
            "tags": {
              "Name": "teletrack360-igw"
            },
            "tags_all": {
              "Name": "teletrack360-igw"
            },
            "vpc_id": "vpc-0938e0ab7b1028fc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bb0d41da7e6c369",
            "association_id": "eipassoc-0c3b3ee8042e5202e",
            "connectivity_type": "public",
            "id": "nat-0d13175ac72334325",
            "network_interface_id": "eni-023400ffdf8a4525c",
            "private_ip": "10.0.1.49",
            "public_ip": "52.202.172.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c85a440ebc279921",
            "tags": {
              "Name": "teletrack360-nat"
            },
            "tags_all": {
              "Name": "teletrack360-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:route-table/rtb-0a393e983f95430e9",
            "id": "rtb-0a393e983f95430e9",
            "owner_id": "954976310009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d13175ac72334325",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "teletrack360-private-rt"
            },
            "tags_all": {
              "Name": "teletrack360-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0938e0ab7b1028fc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:route-table/rtb-0d5f94b01a36da510",
            "id": "rtb-0d5f94b01a36da510",
            "owner_id": "954976310009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab8321c8fe13eb17",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "teletrack360-public-rt"
            },
            "tags_all": {
              "Name": "teletrack360-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0938e0ab7b1028fc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7d8ddc12491e742",
            "route_table_id": "rtb-0a393e983f95430e9",
            "subnet_id": "subnet-0829eae81fd2a75d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5fdb9d90c529f66",
            "route_table_id": "rtb-0a393e983f95430e9",
            "subnet_id": "subnet-05c6d2d2fb4fec45b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02737083bb241f659",
            "route_table_id": "rtb-0d5f94b01a36da510",
            "subnet_id": "subnet-0c85a440ebc279921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e12e20600d11c6",
            "route_table_id": "rtb-0d5f94b01a36da510",
            "subnet_id": "subnet-03e2fe39573b25aa1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:subnet/subnet-0829eae81fd2a75d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0829eae81fd2a75d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954976310009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teletrack360-private-a",
              "kubernetes.io/cluster/teletrack360": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "teletrack360-private-a",
              "kubernetes.io/cluster/teletrack360": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0938e0ab7b1028fc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:subnet/subnet-05c6d2d2fb4fec45b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c6d2d2fb4fec45b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954976310009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teletrack360-private-b",
              "kubernetes.io/cluster/teletrack360": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "teletrack360-private-b",
              "kubernetes.io/cluster/teletrack360": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0938e0ab7b1028fc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:subnet/subnet-0c85a440ebc279921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c85a440ebc279921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954976310009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teletrack360-public-a",
              "kubernetes.io/cluster/teletrack360": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "teletrack360-public-a",
              "kubernetes.io/cluster/teletrack360": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0938e0ab7b1028fc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:subnet/subnet-03e2fe39573b25aa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e2fe39573b25aa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954976310009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teletrack360-public-b",
              "kubernetes.io/cluster/teletrack360": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "teletrack360-public-b",
              "kubernetes.io/cluster/teletrack360": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0938e0ab7b1028fc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976310009:vpc/vpc-0938e0ab7b1028fc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098422d28015f60ba",
            "default_route_table_id": "rtb-02e7c0448eccbf87e",
            "default_security_group_id": "sg-065b6d3d0e83d35f8",
            "dhcp_options_id": "dopt-063f96d3fa559e4de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0938e0ab7b1028fc7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e7c0448eccbf87e",
            "owner_id": "954976310009",
            "tags": {
              "Name": "teletrack360-vpc",
              "kubernetes.io/cluster/teletrack360": "shared"
            },
            "tags_all": {
              "Name": "teletrack360-vpc",
              "kubernetes.io/cluster/teletrack360": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}